--- a/pom.xml
+++ b/pom.xml
@@ -80,17 +80,36 @@
 		  <version>2.3.0</version>
 	  </dependency>
   
-<!-- 	<dependency> -->
-<!-- 		<groupId>org.apache.camel</groupId> -->
-<!-- 		<artifactId>camel-sql</artifactId> -->
-<!-- 		<version>${camel-version}</version> -->
-<!-- 	</dependency> -->
+ 	<dependency>
+ 		<groupId>org.apache.camel</groupId>
+ 		<artifactId>camel-sql</artifactId>
+ 		<version>${camel-version}</version>
+ 	</dependency>
 	
-<!-- 	<dependency> -->
-<!-- 		<groupId>mysql</groupId> -->
-<!-- 		<artifactId>mysql-connector-java</artifactId> -->
-<!-- 		<version>5.1.36</version> -->
-<!-- 	</dependency> -->
+ 	<dependency>
+ 		<groupId>mysql</groupId>
+ 		<artifactId>mysql-connector-java</artifactId>
+ 		<version>8.0.25</version>
+ 	</dependency>
+
+	  <dependency>
+		  <groupId>org.apache.camel</groupId>
+		  <artifactId>camel-xstream</artifactId>
+		  <version>2.16.1</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>com.thoughtworks.xstream</groupId>
+		  <artifactId>xstream</artifactId>
+		  <version>1.4.8</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>org.apache.camel</groupId>
+		  <artifactId>camel-jdbc</artifactId>
+		  <version>${camel-version}</version>
+	  </dependency>
+
 
   </dependencies>
 
