--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
 		  <version>${camel-version}</version>
 	  </dependency>
 
+	  <dependency>
+		  <groupId>org.apache.camel</groupId>
+		  <artifactId>camel-velocity</artifactId>
+		  <version>2.16.1</version>
+	  </dependency>
 
   </dependencies>
 
